--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: docker build . -t rupeshshandilya/next-js-app
       - run: echo "${{secrets.DOCKERHUB_PASSWORD}}" | docker login -u ${{secrets.DOCKERHUB_USERNAME}} --password-stdin
-      - run: docker push ${{secrets.DOCKERHUB_USERNAME}}/next-js-app:latest
+      - run: docker push rupeshshandilya/next-js-app:latest
